# 3D_Urban_Mesh_Annotator

./: .gitignore  README.md  Tutorial.md  tutorial.html - Shortcut.lnk  tutorial.html.lnk  tutorial.md - Shortcut.lnk
CGAL/: path_list.txt
CGAL/IO/: PLY_reader.h  PLY_writer.h  write_ply_points.h
CGAL/Surface_mesh/: Surface_mesh.h
CGAL/Three/: Scene_draw_interface.h  Scene_interface.h  Scene_item.h  Three.h
CGAL/auxiliary/: cgal_create_cmake_script.1
CGAL/demo/Arrangement_on_surface_2/: ArrangementCurveInputCallback.h  ArrangementDemoGraphicsView.h  ArrangementDemoPropertiesDialog.h  ArrangementDemoTab.h  ArrangementSegmentInputCallback.h  Callback.h  Conic_reader.h  CurveGraphicsItem.h  DeleteCurveCallback.h  DeleteCurveMode.h  DeleteCurveModeItemEditor.h  EnvelopeCallback.h  FillFaceCallback.h  GraphicsViewCurveInput.h  GraphicsViewSegmentInput.h  ISnappable.h  MergeEdgeCallback.h  NewTabDialog.h  OverlayDialog.h  PointLocationCallback.h  PointsGraphicsItem.h  PropertyValueDelegate.h  SplitEdgeCallback.h  VerticalRayGraphicsItem.h  VerticalRayShootCallback.h
CGAL/demo/Linear_cell_complex/: MainWindow.h  Viewer.h  import_moka.h  typedefs.h
CGAL/demo/Periodic_3_triangulation_3/: Periodic_3_triangulation_3.qch
CGAL/demo/Periodic_Lloyd_3/: Periodic_Lloyd_3.qch
CGAL/demo/Polyhedron/: MainWindow.cpp
CGAL/demo/Polyhedron/implicit_functions/: Implicit_function_interface.h
CGAL/demo/Segment_Delaunay_graph_2/: svd-typedefs.h
CGAL/examples/Linear_cell_complex/: basic_viewer.h
CGAL/examples/RangeSegmentTrees/include/: Tree_Traits.h
CGAL/include/CGAL/: AABB_face_graph_triangle_primitive.h  AABB_halfedge_graph_segment_primitive.h  AABB_polyhedral_oracle.h  AABB_polyhedron_segment_primitive.h  AABB_polyhedron_triangle_primitive.h  AABB_primitive.h  AABB_segment_primitive.h  AABB_traits.h  AABB_tree.h  AABB_triangle_primitive.h  AABB_triangulation_3_cell_primitive.h  AABB_triangulation_3_triangle_primitive.h  Advancing_front_surface_reconstruction.h  Advancing_front_surface_reconstruction_cell_base_3.h  Advancing_front_surface_reconstruction_vertex_base_3.h  Algebraic_kernel_converter.h  Algebraic_kernel_d_1.h  Algebraic_kernel_d_2.h  Algebraic_kernel_for_circles_2_2.h  Algebraic_kernel_for_spheres_2_3.h  Algebraic_kernel_rs_gmpq_d_1.h  Algebraic_kernel_rs_gmpz_d_1.h  Alpha_shape_2.h  Alpha_shape_3.h  Alpha_shape_cell_base_3.h  Alpha_shape_euclidean_traits_2.h  Alpha_shape_euclidean_traits_3.h  Alpha_shape_face_base_2.h  Alpha_shape_vertex_base_2.h  Alpha_shape_vertex_base_3.h  Apollonius_graph_2.h  Apollonius_graph_adaptation_policies_2.h  Apollonius_graph_adaptation_traits_2.h  Apollonius_graph_data_structure_2.h  Apollonius_graph_filtered_traits_2.h  Apollonius_graph_hierarchy_2.h  Apollonius_graph_hierarchy_vertex_base_2.h  Apollonius_graph_traits_2.h  Apollonius_graph_vertex_base_2.h  Apollonius_site_2.h  (+936 more)
CGAL_Changed/: PLY_reader.h  PLY_writer.h  Scene_item.h  camera_impl.h  path_list.txt
Polyhedron/: CMakeLists.txt  Classification.cpp  Edge_container.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Polyhedron_3.cpp  Polyhedron_demo.cpp  Primitive_container.cpp  SMesh_type.h  Scene.cpp  Scene.h  Scene_find_items.h  Scene_group_item.cpp  Scene_item.cpp  Scene_plane_item.cpp  Scene_plane_item.h  Scene_points_with_normal_item.cpp  Scene_points_with_normal_item.h  Scene_polygon_soup_item.cpp  Scene_polygon_soup_item.h  Scene_polyhedron_selection_item.cpp  Scene_polyhedron_selection_item.h  Scene_polylines_item.cpp  Scene_polylines_item.h  Scene_spheres_item.h  Scene_surface_mesh_item.cpp  Scene_surface_mesh_item.h  Scene_textured_surface_mesh_item.cpp  Scene_textured_surface_mesh_item.h  Selection_visualizer.h  TextRenderer.cpp  Three.cpp  Triangle_container.cpp  UrbanMeshAnnotator.cpp  UrbanMeshAnnotator.h  Viewer.cpp  Viewer.h  image_interface.h  main.cpp  (+1 more)
Polyhedron/Plugins/Camera_position/: CMakeLists.txt  Camera_positions_list.cpp  Camera_positions_list.h  Camera_positions_list.ui  Camera_positions_plugin.cpp
Polyhedron/Plugins/Classification/: CMakeLists.txt  Classification_plugin.cpp  Classification_widget.ui  Cluster_classification.cpp  Cluster_classification.h  Item_classification_base.h  Point_set_item_classification.cpp  Point_set_item_classification.h  Surface_mesh_item_classification.cpp  Surface_mesh_item_classification.h
Polyhedron/Plugins/IO/: CMakeLists.txt  PLY_io_plugin.cpp
Polyhedron/Plugins/PCA/: CMakeLists.txt  Scene_edit_box_item.cpp  Scene_edit_box_item.h
Polyhedron/Plugins/PMP/: CMakeLists.txt  Scene_facegraph_item_k_ring_selection.h  Selection_plugin.cpp  Selection_widget.ui
Polyhedron/Plugins/Point_set/: CMakeLists.txt  Point_set_selection_plugin.cpp
Polyhedron/resources/: 3D_Annotator.xpm
data/: test_f1.ply  tiny_test_c.ply
src/: CMakeLists.txt  Edge_container.cpp  Kernel_type.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Polyhedron_3.qrc  Preferences.ui  Primitive_container.cpp  SMesh_type.h  Scene.cpp  Scene.h  Scene_group_item.cpp  Scene_item.cpp  Scene_points_with_normal_item.h  Scene_polygon_soup_item.cpp  Scene_polyhedron_selection_item.cpp  Scene_polyhedron_selection_item.h  Scene_polylines_item.h  Scene_surface_mesh_item.cpp  Scene_surface_mesh_item.h  Scene_textured_surface_mesh_item.cpp  Scene_textured_surface_mesh_item.h  TextRenderer.cpp  Three.cpp  Viewer.cpp  Viewer.h  main.cpp
src/Plugins/Classification/: CMakeLists.txt  Classification_plugin.cpp  Classification_widget.ui  Item_classification_base.h  Surface_mesh_item_classification.cpp  Surface_mesh_item_classification.h
src/Plugins/IO/: PLY_io_plugin.cpp
src/Plugins/PCA/: Scene_edit_box_item.cpp
src/Plugins/PMP/: CMakeLists.txt  Scene_facegraph_item_k_ring_selection.h  Selection_plugin.cpp  Selection_widget.ui
src/Plugins/Point_set/: CMakeLists.txt  Point_set_selection_plugin.cpp
src/include/: Point_set_3.h
src/include/CGAL/: Triangulation_file_input.h
src/resources/: about.html  annotation_panel.html  cgal_logo.xpm  context_menu.html  quick_introduction.html  selection_panel.html  shortcuts.html  tutorial.html
(+1721 files in other folders)
